--- a/app/views/client-nhs-wales-app/error/already-account-p9.html
+++ b/app/views/client-nhs-wales-app/error/already-account-p9.html
@@ -31,24 +31,32 @@ You already have an NHS login account
 
       <h1>You already have an NHS login account</h1>
 
+      <!-- Wales content
+
       <p>
         <a href="https://app.nhs.wales/login">Go back to the NHS Wales App</a> and use the email address you entered to set up your NHS login.
       </p>
 
-        <div class="nhsuk-card">
-          <div class="nhsuk-card__content">
+      -->
 
-            <h2 class="nhsuk-heading-s">Help with accessing your NHS login account</h2>
-            <p>
-              To change the email, password or phone number you use to log in visit <a href="https://settings.login.nhs.uk/">NHS login and security settings</a>.
-            </p>
-            <p>
-              If you have lost access to your phone number you can find help on the <a href="https://help.login.nhs.uk/">NHS login help centre</a>.
-            </p>
-          </div>
+      <p>
+        To use the website or app you were trying to access, use the email address you entered to set up your NHS login.
+      </p>
+
+      <div class="nhsuk-card">
+        <div class="nhsuk-card__content">
+
+          <h2 class="nhsuk-heading-s">Help with accessing your NHS login account</h2>
+          <p>
+            To change the email, password or phone number you use to log in visit <a href="https://settings.login.nhs.uk/">NHS login and security settings</a>.
+          </p>
+          <p>
+            If you have lost access to your phone number you can find help on the <a href="https://help.login.nhs.uk/">NHS login help centre</a>.
+          </p>
         </div>
+      </div>
 
-        <p>Reference: <b>CID11005</b></p>
+      <p>Reference: <b>CID11005</b></p>
 
 
     </div>  
