'Make it generic'

--- a/app/views/client-nhs-wales-app/email/success-uplift.html
+++ b/app/views/client-nhs-wales-app/email/success-uplift.html
@@ -18,9 +18,13 @@ Email: You now have an NHS login
         You have set up an NHS login
       </h1>
                   
+      <!--- Wales content
+        
       <p>
         You have passed our checks and can now use your NHS login to access the NHS Wales App: <a href="https://app.nhs.wales/login">https://app.nhs.wales/login</a>
-      </p>
+      </p>-->
+
+      <p>You have passed our checks and can now use your NHS login to do things like:</p>
 
       <p class="nhsuk-body">This means you can do things like: 
 
