Hide redundant line

--- a/app/views/client-nhs-wales-app/email/success-uplift.html
+++ b/app/views/client-nhs-wales-app/email/success-uplift.html
@@ -26,7 +26,8 @@ Email: You now have an NHS login
 
       <p>You have passed our checks and can now use your NHS login to do things like:</p>
 
-      <p class="nhsuk-body">This means you can do things like: 
+      <!--- Wales content
+      <p class="nhsuk-body">This means you can do things like: -->
 
         <ul class="nhsuk-list nhsuk-list--bullet">
           <li>
