Take reference out of the inset text

--- a/app/views/client-nhs-wales-app/error/already-account-p5.html
+++ b/app/views/client-nhs-wales-app/error/already-account-p5.html
@@ -49,7 +49,10 @@ There is already an NHS login account linked to this NHS number
 
             <div class="nhsuk-inset-text nhsuk-u-margin-top-0">
               <span class="nhsuk-u-visually-hidden">Information: </span>
-              <p>If you cannot remember creating an NHS login account, <a href="https://prototype-nhs-login-help-87153c4cb7ee.herokuapp.com/">visit the NHS login help centre for further help</a>.</p>
+              <p>
+                If you cannot remember creating an NHS login account, <a href="https://prototype-nhs-login-help-87153c4cb7ee.herokuapp.com/">visit the NHS login help centre for further help</a>.
+              </p>
+            </div>
             
 
             {% if data.alreadyUser === 'multiple' %} <!-- Multiple accounts with the same NHS No -->
