--- a/app/views/client-nhs-wales-app/pol/pol-interrupt.html
+++ b/app/views/client-nhs-wales-app/pol/pol-interrupt.html
@@ -24,15 +24,15 @@ Next steps
 
                     {% if data.contentVersion === 'A' %} 
 
-                    <p>You will need to return to the NHS Wales app to arrange verification from your GP surgery.</p>
+                    <p>You will need to return to the NHS Wales App to arrange verification from your GP surgery.</p>
 
                     {% elif data.contentVersion === 'B' %} 
 
-                    <p>You will need to return to the NHS Wales app for details on how your GP can verify you.</p>
+                    <p>You will need to return to the NHS Wales App for details on how your GP can verify you.</p>
 
                     {% else %} 
 
-                    <p>You will need to return to the NHS Wales app for details on how your GP can verify you.</p>
+                    <p>You will need to return to the NHS Wales App for details on how your GP can verify you.</p>
 
                     
                     {% endif %} 
